crates/rulesteward-fapolicyd/tests/snapshots/F01__empty-subject.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=err
diagnostics=1
[F01] sev=Fatal line=1 col=17 span=16..17 :: found ':' expected ' ', '	', or attribute
