crates/rulesteward-fapolicyd/tests/snapshots/F01__leading-tab-trash.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=err
diagnostics=1
[F01] sev=Fatal line=1 col=2 span=1..2 :: found '~' expected ' ', '	', or decision keyword
