crates/rulesteward-fapolicyd/tests/snapshots/F01__typo-decision-allou.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=err
diagnostics=1
[F01] sev=Fatal line=1 col=5 span=4..5 :: found 'u' expected 'w'
