crates/rulesteward-fapolicyd/tests/snapshots/F01__unknown-directive.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=err
diagnostics=1
[F01] sev=Fatal line=1 col=1 span=0..1 :: found 'i' expected ' ', '	', or decision keyword
